<resources>
    <string name="app_name">Salaty</string>
    <string name="horsTime">"خـارج\n الوقـت  "</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="home">الرئيسية</string>
    <string name="save">حفظ</string>
    <string name="individual">"  فــرد  "</string>
    <string name="collective">"  جمــاعة  "</string>
    <string name="Fajr">الفجر</string>
    <string name="Dhuhr">الظهر</string>
    <string name="Asr">العصر</string>
    <string name="Maghrib">المغرب</string>
    <string name="Isha">العشاء</string>
        <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
