<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background1"
              android:orientation="vertical"
              tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/actualDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonstyle"
        android:padding="10dp"
        android:text="2019/05/04"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border2"
            android:paddingBottom="5dp"
            >

            <TextView
                android:id="@+id/textView55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horsTime"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/individual"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:gravity="left"
                android:text="@string/collective"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                />
        </LinearLayout>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/border2"
            android:gravity="center"
            android:padding="5dp"
            >

            <CheckBox
                android:id="@+id/RBFajr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBFajr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBFajr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:shadowColor="@color/colorPrimaryDark"
                android:text=""
                android:textColorLink="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Fajr"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/border2"
            android:gravity="center"
            android:padding="5dp"
            >

            <CheckBox
                android:id="@+id/RBDhuhr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBDhuhr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBDhuhr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Dhuhr"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/border2"
            android:gravity="center"
            android:padding="5dp"
            >

            <CheckBox
                android:id="@+id/RBAsr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBAsr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBAsr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Asr"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/border2"
            android:gravity="center"
            android:padding="5dp"
            >

            <CheckBox
                android:id="@+id/RBMaghrib3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBMaghrib2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBMaghrib1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Maghrib"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/border2"
            android:gravity="center"
            android:padding="5dp"
            >

            <CheckBox
                android:id="@+id/RBIsha3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBIsha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <CheckBox
                android:id="@+id/RBIsha1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text=""
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Isha"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/buttonstyle"
                android:onClick="toResult"
                android:text="النتائج"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/buttonstyle"
                android:text="التفاصيل"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>