<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0d8c44"
              android:orientation="vertical"
    >



    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/buttonstyle"
            android:gravity="center_vertical"
            android:paddingStart="25dp"
            >

            <TextView
                android:id="@+id/totalPouctg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="% 100"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="نسبة المحافظة على الصلاة :  "
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:gravity="right"
            android:padding="8dp"
            >

            <TextView
                android:id="@+id/fajrPourctg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="% 50"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/Fajr"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:gravity="right"
            android:padding="8dp"
            >
            <TextView
                android:id="@+id/dhuhrpourctg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="% 50"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/Dhuhr"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:gravity="right"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="% 50"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/Asr"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:gravity="right"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="% 50"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/Maghrib"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:gravity="right"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="% 50"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_column="0"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/Isha"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        >
        <TableRow>
            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/buttonstyle"
                android:text="التفاصيل"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/buttonstyle"
                android:onClick="toAccueil"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
